@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0
title Class Diagram - Create City & Assign HouseBlocks

class AddCityUI {
}

class AddCityController {
    +createCity(cityDTO: CityDTO)
    +getListOfMaps(): List<MapDTO>
    +createHouseBlockDTO(mapDTO: MapDTO, coordinate: Position): HouseBlockDTO
    +createListOfHouseBlocksDTO(numHouseBlocks: int): List<HouseBlockDTO>
    +saveCity(cityDTO: CityDTO, mapDTO: MapDTO)
}

class MapRepository {
  +getListOfMaps(): List<Map>
    +getMap(mapID: String): Map
}

class Repositories {
  +getInstance(): Repositories
  +getMapRepository(): MapRepository
}

class Maps {
  +getListOfMaps(): List<Map>
  +getMap(mapID: String): Map
}

class MapMapper {
  +toDTO(map: Map): MapDTO
  +toModel(mapDTO: MapDTO): Map
}

class Map {
  -cities: Cities
  -positions: List<Position>
  +createCity(cityDTO: CityDTO)
  +getCityBoundaries(): List<Position>
  +getAvailablePositions(n: int): List<Position>
  +markPositionOccupied(pos: Position)
}

class Cities {
  +addCity(city: City)
  +validateCity(city: City): boolean
}

class City {
  -nameID: String
  -position: Position
  -houseBlocks: List<HouseBlock>
    +create(nameID: String, position: Position)
    +addHouseBlock(houseBlock: HouseBlock)
    +setHouseBlocks(houseBlocks: List<HouseBlock>)
}

class HouseBlock {
  -position: Position
  -autoAssigned: boolean
}

class HouseBlockDTO {
  +position: Position
  +autoAssigned: boolean

  +getPosition(): Position
    +isAutomaticPlacement(): boolean

}

class Position {
  -x: int
  -y: int
  -occupied: boolean
  +setOccupied(val: boolean)
}

class CityMapper {
  +toModel(cityDTO: CityDTO): City
    +toDTO(city: City): CityDTO
}

class CityDTO {
  +nameID: String
  +position: Position
    +houseBlockDTOs: List<HouseBlockDTO>

  getNameID(): String
    getPosition(): Position
    getHouseBlocksDTO(): List<HouseBlockDTO>
}

class MapDTO {
  +id: String
}

AddCityUI "1" --> "1" AddCityController
AddCityController "1" --> "*" Repositories
AddCityController "1" --> "1" MapMapper
MapMapper "1" --> "1" MapDTO
MapRepository "1" --> "1" MapMapper
Repositories "*" --> "1" MapRepository
MapRepository "1" --> "1" Maps
Maps "1" --> "*" Map
Map "1" --> "*" Cities
Cities "1" --> "*" City
Cities "1" --> "1" CityMapper
CityMapper "1" --> "1" CityDTO
CityMapper "1" --> "*" HouseBlockDTO
City "1" --> "*" HouseBlock
HouseBlock "1" --> "1" Position
CityDTO "1" --> "1" Position
AddCityController "1" --> "1" CityMapper


@enduml
